results/SVCOMP/4-shot/log-CharSequenceBug-2024_03_18_11_19_59.txt
public class CharSequenceBug {
	//@ requires s != null;
	//@ requires (\forall int i; 0 <= i && i < s.length(); (int)Character.MIN_VALUE <= (int)s.charAt(i) && (int)s.charAt(i) <= (int)Character.MAX_VALUE);
	//@ ensures \result <==> replaced.indexOf('b') != -1;
	public static boolean main(String s) {
		CharSequence target = "b";
		String replaced = "";
		if (target.length() == 1) replaced = s.replace('b', 'c');
		return replaced.indexOf('b') != -1;
	}
}
/home/max/Documents/JMLGPT/tmp/CharSequenceBug.java:4: error: cannot find symbol
	//@ ensures \result <==> replaced.indexOf('b') != -1;
	                         ^
  symbol:   variable replaced
  location: class CharSequenceBug
1 error

